Move Paths.get to Path.of